--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <div id="menu">
     </div>
 
+    <div class="circle">
+      <img src="circle.png">
+    </div>
+
     <div id="loghino">
-      <img class="loghetto" src="logo.png">
+      <img src="logo.png">
     </div>
 
   </body>
