--- a/index.html
+++ b/index.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <title> We are louder! </title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="p5.min.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <script src="sketch landing page.js"></script>
-  </head>
 
-  <body>
-    <div id="tela">
-    </div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+  <title> We are louder! </title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="p5.min.js"></script>
+  <script src="p5.sound.min.js"></script>
+  <script src="sketch landing page.js"></script>
+</head>
 
-    <div id="menu">
-    </div>
+<body>
+  <div id="tela">
+  </div>
 
-    <div class="circle">
-      <img src="circle.png">
-    </div>
+  <div id="menu">
+  </div>
 
+  <div class="circle">
+    <img src="circle.png">
+  </div>
+  <div id="corpocentrale">
     <div id="loghino">
-      <img src="logo.png">
+      <img id="imglohino" src="logo.png">
+      <div id="menulist">
+        <ul>
+          <li><a href="#">- about us</a></li>
+          <li><a href="#">- how it works</a></li>
+          <li><a href="#">- explore and join!</a></li>
+        </ul>
+      </div>
     </div>
+  </div>
+</body>
 
-  </body>
 </html>
