--- a/index.html
+++ b/index.html
@@ -15,25 +15,21 @@
   <div id="tela">
   </div>
 
+<!-- div menu è il fondo blu scuro che arriva dopo l'animazione -->
   <div id="menu">
   </div>
 
-
-<div>
-</div>
   <div class="circle">
     <img src="circle.png">
   </div>
   <div id="corpocentrale">
-    <div id="loghino">
-      <img id="imglohino" src="logo.png">
-      <div id="menulist">
-        <ul>
-          <li><a href="#">- about us</a></li>
-          <li><a href="#">- how it works</a></li>
-          <li><a href="#">- explore and join!</a></li>
-        </ul>
-      </div>
+    <img id="imgloghino" src="logo.png">
+    <div id="menulist">
+      <ul>
+        <li><a href="about.html" style="margin-left: -5px;">- about us</a></li>
+        <li><a href="how.html">- how it works</a></li>
+        <li><a href="exploremenu.html" style="margin-left: -7.5px;">- explore and join us!</a></li>
+      </ul>
     </div>
   </div>
 </body>
