--- a/exploremenu.html
+++ b/exploremenu.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="p5.min.js"></script>
   <script src="p5.sound.min.js"></script>
-  <script src="sketch explore page.js"></script>
+  <script src="sketch landing page.js"></script>
 </head>
 
 <body>
@@ -16,17 +16,15 @@
   </div>
 
 <!-- come div menu, ma fisso, senza animazione -->
-<!--
   <div id="menubackfisso">
   </div>
-  <div style="position: absolute; top: 40%;left: 29%;z-index: 60; font-family: Musket regular; font-size:3em; color: #ff8676"> -->
-  <!--  <p>explore page under construction</p>
-    <a href="index2.html"> back </a>
-  -->
-  </div>
-  </div>
 
-  <div id="testi">
+  <div class="circle2">
+    <img src="circle.png">
+  </div>
+  <div id="corpocentrale2">
+    <a href="index.html"><img id="imgloghino2" src="logo.png"></a>
+    
   </div>
 </body>
 
