--- a/exploremenu.html
+++ b/exploremenu.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
   <title> We are louder! </title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style0.css">
   <script src="p5.min.js"></script>
   <script src="p5.sound.min.js"></script>
-  <script src="sketch landing page.js"></script>
+  <script src="sketch explore page.js"></script>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
   </div>
   <div id="corpocentrale2">
     <a href="index.html"><img id="imgloghino2" src="logo.png"></a>
-    
+
   </div>
 </body>
 
