--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <img id="imgloghino" src="logo.png">
     <div id="menulist">
       <ul>
-        <li><a href="about.html" style="margin-left: -5px;">- about us</a></li>
-        <li><a href="how.html">- how it works</a></li>
-        <li><a href="exploremenu.html" style="margin-left: -7.5px;">- explore and join us!</a></li>
+        <li id="about"><a href="about.html" style="margin-left: -5px;">- about us</a></li>
+        <li id="how"><a href="how.html">- how it works</a></li>
+        <li id="explore"><a href="exploremenu.html" style="margin-left: -7.5px;">- explore and join us!</a></li>
       </ul>
     </div>
   </div>
