--- a/exploremenu.html
+++ b/exploremenu.html
@@ -12,6 +12,25 @@
 </head>
 
 <body>
+<div id="backrosa">
+
+</div>
+
+<div>
+  <img id="bluexplore" src="bluexplore.png">
+  <div id="chile">
+    <img class="chilean" src="chilemap.png">
+  </div>
+  <div id="menulist">
+    <ul>
+      <li id="menuchile"><a href="#">chile</a></li>
+      <li><a href="#">colombia</a></li>
+      <li><a href="#">hong kong</a></li>
+      <li><a href="#">lebanon</a></li>
+    </ul>
+  </div>
+</div>
+
   <div id="tela">
   </div>
 
