--- a/exploremenu.html
+++ b/exploremenu.html
@@ -18,15 +18,49 @@
 
 <div>
   <img id="bluexplore" src="bluexplore.png">
+
+  <!-- div a comparsa -->
+  <!-- chile -->
   <div id="chile">
     <img class="chilean" src="chilemap.png">
+    <div id="abstract">
+      <h1>CHILE</h1>
+      <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+    </div>
   </div>
+<!-- colombia -->
+<div id="colombia">
+  <img class="chilean" src="colombiamap.png">
+  <div id="abstract">
+    <h1>COLOMBIA</h1>
+    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+  </div>
+</div>
+<!-- hong kong -->
+<div id="hongkong">
+  <img class="chilean" src="hongmap.png">
+  <div id="abstract">
+    <h1>HONG KONG</h1>
+    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+  </div>
+</div>
+<!-- lebanon -->
+<div id="lebanon">
+  <img class="chilean" src="chilemap.png">
+  <div id="abstract">
+    <h1>LEBANON</h1>
+    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+  </div>
+</div>
+
+
+  <!-- menu -->
   <div id="menulist">
     <ul>
       <li id="menuchile"><a href="#">chile</a></li>
-      <li><a href="#">colombia</a></li>
-      <li><a href="#">hong kong</a></li>
-      <li><a href="#">lebanon</a></li>
+      <li id="menucolombia"><a href="#">colombia</a></li>
+      <li id="menuhongkong"><a href="#">hong kong</a></li>
+      <li id="menulebanon"><a href="#">lebanon</a></li>
     </ul>
   </div>
 </div>
