--- a/exploremenu.html
+++ b/exploremenu.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+  <link rel="icon" href="logo.png">
   <title> We are louder! </title>
   <link rel="stylesheet" type="text/css" href="style0.css">
   <script src="p5.min.js"></script>
@@ -57,7 +58,7 @@
   <!-- menu -->
   <div id="menulist">
     <ul>
-      <li id="menuchile"><a href="#">chile</a></li>
+      <li id="menuchile"><a href="mapchile.html">chile</a></li>
       <li id="menucolombia"><a href="#">colombia</a></li>
       <li id="menuhongkong"><a href="#">hong kong</a></li>
       <li id="menulebanon"><a href="#">lebanon</a></li>
