--- a/form.html
+++ b/form.html
@@ -33,9 +33,11 @@
   </style>
     <script src="p5.min.js"></script>
     <script src="p5.sound.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="https://unpkg.com/mappa-mundi/dist/mappa.js" type="text/javascript"></script>
     <script src="sketch for form.js"></script>
   </head>
+
   <body>
     <div id="tela">
     </div>
@@ -43,5 +45,21 @@
     <div id="texts">
       <h1><a href="mapchile.html"> BACK </a></h1>
     </div>
+
+<form action="" method="POST">
+	<div class="form-group">
+		<label for="" class="required" >Home Country:</label>
+		<select name="country" id="country" class="form-control">
+			<option value="">Country</option>
+		</select>
+	</div>
+
+	<div class="form-group">
+		<label for="" class="required" >Biggest city near your position :</label>
+		<select name="name" id="name" class="form-control">
+			<option value="">City</option>
+		</select>
+	</div>
+</form>
   </body>
 </html>
