--- a/mapchile.html
+++ b/mapchile.html
@@ -5,34 +5,8 @@
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <link rel="icon" href="logo.png">
     <title> We are louder! </title>
+    <link rel="stylesheet" type="text/css" href="style0.css">
     <style>
-
-    body {
-      padding: 0;
-      margin: 0;
-    }
-
-    #tela {
-      position: absolute;
-      z-index: 0;
-    }
-
-    #texts{
-      position: absolute;
-      z-index: 100;
-      right:5%;
-    }
-
-    h1 a{
-      float: right;
-      width: 100%;
-      height: 10%;
-      font-family: Musket regular;
-      font-size: 15px;
-      font-style: normal;
-      color: white;
-      text-decoration: none;
-    }
   </style>
     <script src="p5.min.js"></script>
     <script src="p5.sound.min.js"></script>
@@ -43,8 +17,10 @@
     <div id="tela">
     </div>
 
-    <div id="texts">
-      <h1><a href="form.html"> SUPPORT </a></h1>
+    <div id="textsupport">
+      <h1><a class="button" href="form.html"> SUPPORT </a></h1>
+    </div>
+    <div id="textback">
       <h1><a href="exploremenu.html"> BACK </a></h1>
     </div>
   </body>
