--- a/form.html
+++ b/form.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -14,10 +13,12 @@
     #tela {
       position: absolute;
       z-index: 0;
+      background-color: #ff8676;
     }
 
     #texts{
-
+      position: absolute;
+      z-index: 50;
     }
 
     h1 a{
@@ -30,11 +31,19 @@
       color: white;
       text-decoration: none;
     }
+
+    .container {
+      position: relative;
+      z-index: 100;
+    }
   </style>
     <script src="p5.min.js"></script>
     <script src="p5.sound.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script src="https://unpkg.com/mappa-mundi/dist/mappa.js" type="text/javascript"></script>
+    <script src="jquery-3.4.1.min.js"></script>
+    <script src="form.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="sketch for form.js"></script>
   </head>
 
@@ -46,20 +55,20 @@
       <h1><a href="mapchile.html"> BACK </a></h1>
     </div>
 
-<form action="" method="POST">
-	<div class="form-group">
-		<label for="" class="required" >Home Country:</label>
-		<select name="country" id="country" class="form-control">
-			<option value="">Country</option>
-		</select>
-	</div>
+ <div class="container" style="width:600px;">
+    <select name = "country" id = "country" class = "form-control input-lg">
+      <option value =""> Select country </option>
+    </select>
+      <br />
+      <select name = "state" id = "state" class = "form-control input-lg">
+        <option value =""> Select state </option>
+      </select>
+        <br />
+    <select name = "city" id = "city" class = "form-control input-lg">
+      <option value =""> Select city </option>
+    </select>
+      <br />
+  </div>
 
-	<div class="form-group">
-		<label for="" class="required" >Biggest city near your position :</label>
-		<select name="name" id="name" class="form-control">
-			<option value="">City</option>
-		</select>
-	</div>
-</form>
-  </body>
+    </body>
 </html>
