--- a/form.html
+++ b/form.html
@@ -38,12 +38,13 @@
     }
   </style>
     <script src="p5.min.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <script src="jquery-3.4.1.min.js"></script>
+    <script src="p5.dom.js"></script>
+  <!--  <script src="jquery-3.4.1.min.js"></script>
     <script src="form.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  -->
     <script src="sketch for form.js"></script>
   </head>
 
@@ -52,9 +53,9 @@
     </div>
 
     <div id="texts">
-      <h1><a href="mapchile.html"> BACK </a></h1>
+      <h1><a href="mapchile.html">  </a></h1>
     </div>
-
+<!--
  <div class="container" style="width:600px;">
     <select name = "country" id = "country" class = "form-control input-lg">
       <option value =""> Select country </option>
@@ -69,6 +70,7 @@
     </select>
       <br />
   </div>
+-->
 
     </body>
 </html>
