--- a/mapchile.html
+++ b/mapchile.html
@@ -27,6 +27,10 @@
 
     <div id="form" style="display:none;">
       <h2>Where are you from?</h2>
+      <h3>COUNTRY</h3>
+      <h3>STATE</h3>
+      <h3>CITY</h3>
+      <button class="thabutton">SUPPORT!</button>
     </div>
 
 <script>
