--- a/exploremenu.html
+++ b/exploremenu.html
@@ -26,7 +26,14 @@
     <img class="chilean" src="chilemap.png">
     <div id="abstract">
       <h1>CHILE</h1>
-      <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+      <p>"The protests in Chile consist of a series of demonstrations and
+        riots originated in Santiago de Chile. These are taking place since
+        the 18th of October of 2019. The first one was driven by secondary
+        students but rapidly different social actors joined all over the country.
+        <br> The main reasons for the mobilizations are the growth of social
+        inequality over the years, the increased prices of basic services, the
+        health system and the unfairness of pensions of the retired people." </br>
+        </p>
     </div>
   </div>
 <!-- colombia -->
@@ -34,7 +41,16 @@
   <img class="chilean" src="colombiamap.png">
   <div id="abstract">
     <h1>COLOMBIA</h1>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+    <p>"Colombia is being active in demonstrations since the end of 2019. The
+      first big protest took place on the 21 of November in several cities at
+      the same time.
+      <br> The general discontent of the current government was one of the main
+      drivers of the protest. However, one of the most important was the breach
+      of the peace pact signed three years ago ending the 50 years of arm
+      conflict. Along with this, the new social, economic and environmental
+      policies and reforms, the killings of indigenous and social leaders and
+      the civilian deaths caused by the military force, among others."</br>
+    </p>
   </div>
 </div>
 <!-- hong kong -->
@@ -42,7 +58,11 @@
   <img class="chilean" src="hongmap.png">
   <div id="abstract">
     <h1>HONG KONG</h1>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+    <p>"Hong Kong has been involved in several demonstrations since the 31 of March 2019.
+      <br> What initiated the demonstrations was the Legislative process of 2019 Hong Kong
+      extradition bill, but nowadays, the protests include other issues such as demands
+      for democratic reform and the Causeway Bay Books disappearances."</br>
+    </p>
   </div>
 </div>
 <!-- lebanon -->
@@ -50,7 +70,13 @@
   <img class="chilean" src="lebanonmap.png">
   <div id="abstract">
     <h1>LEBANON</h1>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+    <p>"Lebanon demonstrations have been taking place since 17 October 2019.
+      The first protest was held by a small group of people in Beirut but
+      rapidly expended to the rest of the country.
+      <br> The main reasons for the mobilizations are economic stagnant, unemployment,
+      endemic corruption in the public sector, and failures from the government to
+      provide basic services to the population."</br>
+    </p>
   </div>
 </div>
 
