--- a/about.html
+++ b/about.html
@@ -5,27 +5,66 @@
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
   <link rel="icon" href="logo.png">
-  <title> We are louder! </title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="p5.min.js"></script>
-  <script src="p5.sound.min.js"></script>
-  <script src="sketch landing page.js"></script>
+  <title> We are louder! || ABOUT </title>
+  <link rel="stylesheet" type="text/css" href="style0.css">
 </head>
 
-<body>
-  <div id="tela">
-  </div>
-
-<!-- come div menu, ma fisso, senza animazione -->
-  <div id="menubackfisso">
-  </div>
-  <div style="position: absolute; top: 40%;left: 29%;z-index: 60; font-family: Musket regular; font-size:3em; color: #ff8676">
-    <p>about page under construction</p>
-    <a href="index2.html"> back </a>
-  </div>
+<body id="backabout">
+  <a name="ancora"></a>
 
 
-  </div>
+  <main>
+
+    <div>
+
+
+      <h1 id="titoloabout">ABOUT US</h1>
+      <p class="parabout">lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
+        lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
+        blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+        aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
+        luptatum zzril delenit augue duis dolore te feugait nulla facilisi.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+        quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero
+        eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+
+
+
+      <div style="background-color: white; height:300px; margin:0% 21% 4% 21%">
+
+        <!-- <img src=""></img> -->
+
+      </div>
+
+
+
+      <p class="parabout">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
+        lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
+        blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+
+      <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
+      <div style="background-color: white; height:300px; margin:0% 21% 4% 21%">
+
+        <!-- <img src=""></img> -->
+
+      </div>
+
+    </div>
+
+  </main>
+
+
+  <footer>
+    <ul id="red">
+      <li class="footerstring">© We Are Louder</li>
+      <li class="footerstring"><a href="how.html">How it works</a></li>
+      <li class="footerstring"><a href="#">explore and join!</a></li>
+      <li class="footerstring"><a href="#ancora">Top</a></li>
+    </ul>
+  </footer>
+
+
+</body>
 </body>
 
 </html>
