--- a/mapchile.html
+++ b/mapchile.html
@@ -9,6 +9,7 @@
     <style>
   </style>
     <script src="p5.min.js"></script>
+    <script src="leaflet.js"></script>
     <script src="p5.sound.min.js"></script>
     <script src="https://unpkg.com/mappa-mundi/dist/mappa.js" type="text/javascript"></script>
     <script src="sketch for map.js"></script>
