--- a/about.html
+++ b/about.html
@@ -43,9 +43,22 @@
         blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
 
       <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
-      <div style="background-color: white; height:300px; margin:0% 21% 4% 21%">
-
-        <!-- <img src=""></img> -->
+      <div style="height:200px; margin:8% 21% 0% 21%">
+        <div id="logopoli" style="display:block; float:left;">
+          <img src="logo-polimi-w.svg"></img>
+        </div>
+        <div id="teachers">
+          <h3 style="margin-top: 7%; margin-left: 0%;">Teachers:</h3>
+          <p style=" margin-left: 0%;">Michele Mauri</p>
+          <p style=" margin-left: 0%;">Andrea Benedetti</p>
+        </div>
+        <div id="developpers">
+          <h3 style="margin-top: 7%; margin-left: 20%;">Developped by:</h3>
+          <p style=" margin-left: 20%;">Sasso Michele</p>
+          <p style=" margin-left: 20%;">Suarez Anzorena Maria del Pilar</p>
+          <p style=" margin-left: 20%;">Vargas Triana Maria Paula</p>
+          <p style=" margin-left: 20%;">Ventura Giorgio</p>
+        </div>
 
       </div>
 
@@ -58,7 +71,7 @@
     <ul id="red">
       <li class="footerstring">© We Are Louder</li>
       <li class="footerstring"><a href="how.html">How it works</a></li>
-      <li class="footerstring"><a href="#">explore and join!</a></li>
+      <li class="footerstring"><a href="exploremenu.html">explore and join!</a></li>
       <li class="footerstring"><a href="#ancora">Top</a></li>
     </ul>
   </footer>
