--- a/exploremenu.html
+++ b/exploremenu.html
@@ -84,10 +84,10 @@
   <!-- menu -->
   <div id="menulist">
     <ul>
-      <li id="menuchile"><a href="mapchile.html">chile</a></li>
-      <li id="menucolombia"><a href="#">colombia</a></li>
-      <li id="menuhongkong"><a href="#">hong kong</a></li>
-      <li id="menulebanon"><a href="#">lebanon</a></li>
+      <li id="menuchile"><a href="chileexplanation.html">chile</a></li>
+      <li id="menucolombia"><a href="colombiaexplanation.html">colombia</a></li>
+      <li id="menuhongkong"><a href="hongkongexplanation.html">hong kong</a></li>
+      <li id="menulebanon"><a href="lebanonexplanation.html">lebanon</a></li>
     </ul>
   </div>
 </div>
