--- a/exploremenu.html
+++ b/exploremenu.html
@@ -24,8 +24,8 @@
   <!-- chile -->
   <div id="chile">
     <img class="chilean" src="chilemap.png">
-    <div id="abstract">
-      <h1>CHILE</h1>
+    <div class="abstract">
+      <h1 class="titolet">CHILE</h1>
       <p>"The protests in Chile consist of a series of demonstrations and
         riots originated in Santiago de Chile. These are taking place since
         the 18th of October of 2019. The first one was driven by secondary
@@ -39,8 +39,8 @@
 <!-- colombia -->
 <div id="colombia">
   <img class="chilean" src="colombiamap.png">
-  <div id="abstract">
-    <h1>COLOMBIA</h1>
+  <div class="abstract">
+    <h1 class="titolet">COLOMBIA</h1>
     <p>"Colombia is being active in demonstrations since the end of 2019. The
       first big protest took place on the 21 of November in several cities at
       the same time.
@@ -56,8 +56,8 @@
 <!-- hong kong -->
 <div id="hongkong">
   <img class="chilean" src="hongmap.png">
-  <div id="abstract">
-    <h1>HONG KONG</h1>
+  <div class="abstract">
+    <h1 class="titolet">HONG KONG</h1>
     <p>"Hong Kong has been involved in several demonstrations since the 31 of March 2019.
       <br> What initiated the demonstrations was the Legislative process of 2019 Hong Kong
       extradition bill, but nowadays, the protests include other issues such as demands
@@ -68,8 +68,8 @@
 <!-- lebanon -->
 <div id="lebanon">
   <img class="chilean" src="lebanonmap.png">
-  <div id="abstract">
-    <h1>LEBANON</h1>
+  <div class="abstract">
+    <h1 class="titolet">LEBANON</h1>
     <p>"Lebanon demonstrations have been taking place since 17 October 2019.
       The first protest was held by a small group of people in Beirut but
       rapidly expended to the rest of the country.
