--- a/exploremenu.html
+++ b/exploremenu.html
@@ -82,12 +82,13 @@
 
 
   <!-- menu -->
-  <div id="menulist">
+  <div id="list">
     <ul>
-      <li id="menuchile"><a href="chileexplanation.html">chile</a></li>
-      <li id="menucolombia"><a href="colombiaexplanation.html">colombia</a></li>
-      <li id="menuhongkong"><a href="hongkongexplanation.html">hong kong</a></li>
-      <li id="menulebanon"><a href="lebanonexplanation.html">lebanon</a></li>
+      <li class="menulist" id="menuchile"><a href="chileexplanation.html">chile</a></li>
+      <li class="menulist" id="menucolombia"><a href="colombiaexplanation.html">colombia</a></li>
+      <li class="menulist" id="menuhongkong"><a href="hongkongexplanation.html">hong kong</a></li>
+      <li class="menulist" id="menulebanon"><a href="lebanonexplanation.html">lebanon</a></li>
+      <li id="backhome"><a href="index2.html">back</a></li>
     </ul>
   </div>
 </div>
