--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
 
 
       <h1 id="titoloabout">ABOUT US</h1>
+      <h2 id="goto" class="subtitle"> <a href="index2.html"> back </a> </h2>
       <p class="parabout">lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
         lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
         blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
