--- a/lebanonexplanation.html
+++ b/lebanonexplanation.html
@@ -18,51 +18,116 @@
     <div>
 
 
-      <h1 id="titoloabout"> XXXX </h1>
+      <h1 id="titoloabout"> Lebanon</h1>
       <h2 id="goto" class="subtitle"> <a href="maplebanon.html"> go to the map</a> </h2>
       <h2 id="goto" class="subtitle"> <a href="exploremenu.html"> back to menu</a> </h2>
-      <p class="parabout">lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
-        lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
-        blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-        aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
-        luptatum zzril delenit augue duis dolore te feugait nulla facilisi.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-        quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero
-        eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
 
+      <p class="subtitleparabout"> The WhatsApp Revolution <p>
+          <p class="parabout">
+            It is estimated that more than 1.5 million people have taken to the streets of
+            Lebanon during the weekend of October 17th. The protests, which have taken place
+            practically in all the cities and towns of the country, and even abroad, have
+            been characterized by their transversal nature: the protesters belong to all
+            sects and social strata, and the object of citizen anger is the entire Government
+            and Lebanese political parties, who are accused of being corrupt and unable to
+            solve the country's problems.
+          </p>
 
+          <p class="subtitleparabout"> What triggered the protests? <p>
 
-      <div style="background-color: white; height:300px; margin:0% 21% 4% 21%">
+              <p class="parabout">
+                The trigger for the demonstrations was the announcement to impose a tax
+                on telephone calls through voice services over the internet, such as
+                Whatsapp and Telegram. However, the "WhatsApp rate" is only the tip of
+                the iceberg.
+                <br></br>
+                <br> Discontent has been brewing over the past eight months, when former
+                Prime Minister Hariri announced "the most austere budget in the history
+                of Lebanon" to reduce one of the highest external debts - € 75.8 billion,
+                which is equivalent to 150% of GDP. Austerity means cuts: first, the rise
+                in an IVA point and then, the reduction of the pensions of officials and
+                milicy. </br>
+              </p>
 
-        <img src=""></img>
+              <div style="height:550px; margin:0% 0% 4% 21%">
+                <img src="img/Lebanon_1.jpg"></img>
+              </div>
 
-      </div>
+              <p class="subtitleparabout"> What do people aim with the protests? <p>
+                  <p class="parabout">
+                    The protests aim to break the current status quo with a government of
+                    technocrats. This is the first generation of the post-civil war (1975-1990)
+                    that rejects sectarian rules and considered them expired. The confessional
+                    political system that rules in Lebanon implies that power should be distributed
+                    by quotas; the president must be a Christian; the prime minister, a Sunni Muslim,
+                    and the president of Parliament, a Shiite Muslim. For the protesters, this
+                    system intoxicates coexistence in the country.
+                    <br></br>
+                    <br> Lebanon is ranked 138th out of 180 on the Transparency International
+                    corruption list. The political elite overlaps the economic one: six of the
+                    seven Lebanese on the Forbes fortune list in 2019 are politicians: three
+                    from the Hariri clan, two from the Miqat clan. One of the demands is that
+                    politicians involved in cases of embezzlement of public funds be tried and
+                    their property seized.
+                    </br>
 
+                    <br> According to the World Bank, one-third of the population lives below
+                    the poverty line. Only 1% of the population accumulates more than a third
+                    of the country's wealth, which accentuates social inequality and puts the
+                    middle class on the way to extinction.
+                    </br>
 
+                    <br> While the authorities do not define a government that responds to the
+                    urgent needs of the Lebanese, the World Bank warned that the number of
+                    people in the country living in poverty could increase from one third to
+                    half of the population.
+                    </br>
 
-      <p class="parabout">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
-        lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
-        blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+                  </p>
 
-      <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
+                  <!-- <a href="#" id="linkend">MAYBE A LINK</a> -->
 
-      <div style="background-color: white; height:300px; margin:0% 21% 4% 21%">
+                  <div style="background-color:white; height:550px; margin:0% 0% 4% 21%">
+                    <img src=""></img>
+                  </div>
 
-        <img src=""></img>
+                  <p class="subtitleparabout"> What are the consequences of the protests?<p>
 
-      </div>
+                      <p class="parabout">
+                        Due to the demonstrations, the banks, which control 90% of the
+                        currencies, have closed their doors panicking citizens. Moreover,
+                        they imposed a limit for withdrawals to avoid a lack of liquidity
+                        in dollars. As a consequence, the Lebanese pound (whose parity with
+                        the dollar had remained since 1997) has suffered a dramatic
+                        depreciation and is changed 45% below. This situation has triggered
+                        prices by 20% in just one month.
+                        <br></br>
+                        <br> Because of the decrease of the depreciation, gas stations went on
+                        strike due to the impossibility of importing fuel for lack of dollars,
+                        and both hospitals and companies warn that they will soon run out of
+                        their medicine and food reserves if they do not have access to foreign
+                        exchange. In addition, the country's infrastructures, fall apart and
+                        the population suffers power cuts of between three and 12 hours a day.
+                        </br>
+                      </p>
 
-      <p class="parabout">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
-        lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui
-        blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+                        <div style="background-color: white; height:300px; margin:0% 21% 4% 21%">
+                          <img src=""></img>
+                        </div>
 
-
-        <div style="background-color: white; height:300px; margin:0% 21% 4% 21%">
-
-          <img src=""></img>
-
-        </div>
-
+                        <p class="subtitleparabout"> Lebanon now <p>
+                            <p class="parabout"> Lebanon formed a new government with Hassan Diab. He claimed to
+                              be working on the new election law and stressed that his cabinet was
+                              formed in line with protesters’ expectations. In addition, they
+                              claimed that they would work for the return of looted public funds
+                              and the independence of the judiciary.
+                              <br></br>
+                              <br> The confirmation of this new government caused a crack between
+                              Lebanese people (the ones who trust the new government and the ones
+                              who don’t), making protests continue but not as peaceful as they were.
+                              </br>
+                            </p>
+                            <p class="subtitleparabout center" style="color:#ff8676; margin:0% 21% 4% 21%" > Be part of the Lebanese fight in a P A C I F I C way! </p>
     </div>
 
   </main>
@@ -71,9 +136,9 @@
   <footer>
     <ul id="red">
       <li class="footerstring">© We Are Louder</li>
-      <li class="footerstring"><a href="how.html">How it works</a></li>
+      <li class="footerstring"><a href="how.html">how it works</a></li>
       <li class="footerstring"><a href="exploremenu.html">explore and join!</a></li>
-      <li class="footerstring"><a href="#ancora">Top</a></li>
+      <li class="footerstring"><a href="#ancora">top</a></li>
     </ul>
   </footer>
 
