--- a/hongkongexplanation.html
+++ b/hongkongexplanation.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
   <link rel="icon" href="logo.png">
-  <title> We are louder! || ABOUT </title>
+  <title> We are louder! </title>
   <link rel="stylesheet" type="text/css" href="style0.css">
 </head>
 
